rewrite fronted using typescript. Dirty but working
