# backend/main.py
@@ -1,33 +1,32 @@
 import uuid
-from flask import Blueprint, Flask, render_template, request, redirect, url_for
+from flask import Blueprint, Flask, render_template, request, redirect, send_from_directory, url_for, jsonify
 import bcrypt
-from flask import jsonify
 import os
 from sqlalchemy.orm import joinedload
 from flask_config import Development, Production
-from db import db, User, Client, Session, SessionStatus, Choice, Question
+from db import db, User, Client, Session, SessionStatus, Choice, Question, client_schema, choice_schema
 from flask_cors import CORS
 from flask_jwt_extended import JWTManager, create_access_token, get_jwt_identity, current_user, jwt_required
 
 def create_app(config):
     app = Flask(__name__, static_folder='../frontend/build', static_url_path='', template_folder='templates')
     app.secret_key = os.getenv("FLASK_SECRET_KEY", default="default_secret_key_here")
+    app.url_map.strict_slashes = False
     app.config.from_object(config)
     db.init_app(app)
     CORS(app)
     jwt = JWTManager(app)
 
-    swagger_blu = Blueprint('site', __name__, static_url_path='/static/', static_folder='static')
-    app.register_blueprint(swagger_blu)
-
-
+    if config == Development:
+        swagger_blu = Blueprint('site', __name__, static_url_path='/static/', static_folder='static')
+        app.register_blueprint(swagger_blu)
+    
     def calculate_hash(password, salt):
         return bcrypt.hashpw(password.encode("utf-8"), salt.encode("utf-8")).decode("utf-8")
 
-
     def generate_salt():
         return bcrypt.gensalt().decode("utf-8")
-    
+
     @jwt.user_identity_loader
     def user_identity_lookup(user):
         return user.id
@@ -37,26 +36,28 @@ def create_app(config):
         identity = jwt_data["sub"]
         return User.query.filter_by(id=identity).one_or_none()
 
+
     @app.route('/')
     def index():
         return app.send_static_file('index.html')
 
-    @app.route("/api/v1/auth/register", methods=["POST",])
+
+    @app.route("/api/v1/auth/register", methods=["POST"])
     def register():
         username = request.form["username"]
         password = request.form["password"]
-        
+
         def is_password_valid(password):
             return True
-        
+
         existing_user = User.query.filter_by(username=username).first()
-        
+
         if existing_user:
             return jsonify(message="Username already exists. Please choose a different one."), 400
-        
+
         if not is_password_valid(password):
             return jsonify(message="Password is not valid"), 400
-        
+
         salt = generate_salt()
         hashed_password = calculate_hash(password, salt)
 
@@ -81,72 +82,79 @@ def create_app(config):
         return jsonify(access_token=access_token)
 
     @app.route("/api/v1/clients", methods=["POST"])
-    
     @jwt_required()
     def add_client():
-        print(current_user.username)
         name = request.form.get("name")
         new_client = Client(id=uuid.uuid1().hex, name=name, user_id=current_user.id)
         db.session.add(new_client)
         db.session.commit()
         return jsonify(success=True)
 
+    @app.route("/api/v1/clients", methods=["GET"])
+    @jwt_required()
+    def clients_info():
+        clients = Client.query.filter_by(user_id=current_user.id, deleted=False).all()
+        return jsonify(client_schema.dump(clients))
+    
+    @app.route("/api/v1/clients/<client_id>", methods=["GET"])
+    @jwt_required()
+    def client_info(client_id):
+        client = Client.query.filter_by(id=client_id).one_or_404()
+        return jsonify(client_schema.dump(client, many=False))
 
-    @app.route("/client_page/<share_uid>", methods=["POST", "GET"])
-    def serve_client_page(share_uid):
-        questions_type = request.args.get("type")
+    @app.route("/api/v1/clients/<client_id>", methods=["DELETE"])
+    @jwt_required()
+    def client_delete(client_id):
+        client = Client.query.filter_by(id=client_id).one_or_404()
+        client.deleted = True
+        db.session.commit()
+        return jsonify(success=True)
 
-        session = Session.query.filter_by(share_uid=share_uid).first()
+    @app.route("/api/v1/clients/<client_id>/choices", methods=["GET"])
+    @jwt_required()
+    def get_choices(client_id):
+        client = Client.query.filter_by(user_id=current_user.id, id=client_id, deleted=False).one_or_404()
+
+        pre_session_questions_ids = [q.id for q in Question().pre_session_questions]
+        post_session_questions_ids = [q.id for q in Question().post_session_questions]
+
+        choices_pre = Choice.query.filter(Choice.client_id == client.id, Choice.question_id.in_(pre_session_questions_ids)).all()
+        choices_post = Choice.query.filter(Choice.client_id == client.id, Choice.question_id.in_(post_session_questions_ids)).all()
+        return jsonify(choice_schema.dump(choices_pre), choice_schema.dump(choices_post))
+
+    @app.route("/client-page/<share_uid>", methods=["POST", "GET"])
+    def get_choice_results(share_uid):
+        session = Session.query.filter_by(share_uid=share_uid).one_or_404()
+            
         client = session.client if session else None
         user = client.user if client else None
-
-        if request.method == "POST":
-
-            for question_id, value in request.form.items():
-                new_choice = Choice(
+        type_ = request.args.get('type')
+        if request.method == "GET":
+            if type_ == 'pre' and session.pre_session_completed:
+                return jsonify(completed=True)
+            elif type_ == 'post' and session.post_session_completed:
+                return jsonify(completed=True)
+            return jsonify(completed=False)
+        print(list(request.form.items()))
+        for question_id, value in request.form.items():
+            new_choice = Choice(
                     choice=value,
                     client_id=client.id,
                     user_id=user.id,
                     question_id=question_id,
                     session_id=session.id,
                 )
-                db.session.add(new_choice)
-            if questions_type == "pre":
-                session.pre_session_completed = True
-            elif questions_type == "post":
-                session.post_session_completed = True
+            db.session.add(new_choice)
+        if type_ == "pre":
+            session.pre_session_completed = True
+        elif type_ == "post":
+            session.post_session_completed = True
+        db.session.commit()
+        return jsonify(success=True)
 
-            if (
-                session.pre_session_completed is True
-                and session.post_session_completed is True
-            ):
-                session.status = SessionStatus.FINISHED
-            db.session.commit()
-
-        elif request.method == "GET":
-            if questions_type == "pre" and not session.pre_session_completed:
-                return render_template(
-                    "client_page.html",
-                    client=client,
-                    session=session,
-                    user_id=current_user.id,
-                    questions_type=questions_type,
-                    questions=Question().pre_session_questions,
-                )
-            elif questions_type == "post" and not session.post_session_completed:
-                return render_template(
-                    "client_page.html",
-                    client=client,
-                    session=session,
-                    user_id=current_user.id,
-                    questions_type=questions_type,
-                    questions=Question().post_session_questions,
-                )
-        return render_template("thank_you_page.html")
-
-
-    @app.route("/api/start_session/<client_id>", methods=["POST"])
-    def start_session(client_id):
+    @app.route("/api/v1/clients/<client_id>/sessions", methods=["POST"])
+    @jwt_required()
+    def new_session(client_id):
         client = Client.query.get(client_id)
         if client:
             active_session = Session.query.filter_by(
@@ -166,9 +174,9 @@ def create_app(config):
             return jsonify({"status": "success", "session_id": new_session.id})
         return jsonify({"status": "error", "message": "Client not found"}), 404
 
-
-    @app.route("/api/finish_session/<client_id>", methods=["POST"])
-    def finish_session(client_id):
+    @app.route("/api/v1/clients/<client_id>/sessions/<session_id>/finish", methods=["PATCH"])
+    @jwt_required()
+    def finish_session(client_id, session_id):
         session = Client.query.get(client_id).active_session
 
         if session:
@@ -188,65 +196,10 @@ def create_app(config):
         else:
             return jsonify({"status": "error", "message": "Session not found"}), 404
 
-
-    def set_has_unfinished_choices(client_id):
-        client = Client.query.get(client_id)
-        if client:
-            client.has_unfinished_choices = True
-            db.session.commit()
-
-
-    @app.route("/api/set_has_unfinished_choices/<client_id>", methods=["POST"])
-    def api_set_has_unfinished_choices(client_id):
-        set_has_unfinished_choices(client_id)
-        return jsonify({"status": "success"})
-
-
-    @app.route("/api/choices/<client_id>")
-    def get_client_choices(client_id):
-        choices1 = (
-            Choice.query.filter(
-                Choice.client_id == client_id, Choice.question.has(type="before_session")
-            )
-            .options(joinedload(Choice.question))  # Eagerly load the related Question
-            .order_by(Choice.timestamp)
-            .all()
-        )
-
-        choices1_data = [
-            {
-                "timestamp": choice.timestamp.strftime("%Y-%m-%d %H:%M:%S"),
-                "choice": choice.choice,
-                "question": choice.question.text,
-                "theme": choice.question.theme,
-            }
-            for choice in choices1
-        ]
-        choices2 = (
-            Choice.query.filter(
-                Choice.client_id == client_id, Choice.question.has(type="before_session")
-            )
-            .options(joinedload(Choice.question))  # Eagerly load the related Question
-            .order_by(Choice.timestamp)
-            .all()
-        )
-
-        choices2_data = [
-            {
-                "timestamp": choice.timestamp.strftime("%Y-%m-%d %H:%M:%S"),
-                "choice": choice.choice,
-                "question": choice.question.text,
-                "theme": choice.question.theme,
-            }
-            for choice in choices2
-        ]
-
-        return jsonify([choices1_data, choices2_data])
-
-
     @app.route("/admin_dashboard/")
+    @jwt_required()
     def serve_admin_dashboard():
-        clients = Client.query.filter_by(user_id=current_user.get_id()).all()
+        clients = Client.query.filter_by(user_id=current_user.id).all()
         clients_with_sessions = []
         for client in clients:
             session = client.active_session
@@ -260,35 +213,48 @@ def create_app(config):
         return render_template(
             "admin_dashboard.html",
             clients=clients_with_sessions,
-            psycho_id=current_user.get_id(),
+            psycho_id=current_user.id,
         )
 
-
     @app.route("/client_history/<client_id>")
+    @jwt_required()
     def serve_client_history(client_id):
         client = Client.query.get(client_id)
         choices = Choice.query.filter_by(client_id=client_id).order_by("timestamp").all()
         return render_template("client_history.html", client=client, choices=choices)
 
-
     @app.route("/api/v1/auth/logout", methods=["POST"])
+    @jwt_required()
     def logout():
-
         return jsonify(success=True)
-    
+
+
     @app.route('/api/docs')
     def get_docs():
-        print('sending docs')
         return render_template('swaggerui.html')
     
+    @app.route("/api/v1/questions/<questions_type>", methods=["GET"])
+    def get_questions(questions_type):
+        if questions_type == "pre":
+            questions = Question().pre_session_questions
+        elif questions_type == "post":
+            questions = Question().post_session_questions
+        else:
+            return jsonify({"status": "error", "message": "Invalid question type"}), 400
+        questions = [{"id": q.id, "text": q.text} for q in questions]
+        return jsonify(questions)
+    # @app.before_request
+    # def print_routes():
+        # for rule in app.url_map.iter_rules():
+            # print(f"Endpoint: {rule.endpoint}, Rule: {rule}, Methods: {rule.methods}")
+
+
     return app
-
-
 
 if __name__ == "__main__":
     configs = {
-    'development': Development,
-    'produuction': Production,
+        'development': Development,
+        'production': Production,
     }
     if not os.getenv("Environment"):
         from dotenv import load_dotenv
