# backend/static/openapi.json
@@ -108,11 +108,15 @@
         "responses": {
           "200": {
             "description": "Successful login",
-            "headers": {
-              "Set-Cookie": {
+            "content": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "example": "session=<session_cookie>"
+                  "type": "object",
+                  "properties": {
+                    "access_token": {
+                      "type": "string"
+                    }
+                  }
                 }
               }
             }
@@ -238,25 +242,11 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "integer"
+              "type": "string"
             }
           }
         ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "session_data": {
-                    "type": "object"
-                  }
-                }
-              }
-            }
-          }
-        },
+
         "responses": {
           "200": {
             "description": "Successfully started session",
@@ -440,6 +430,64 @@
           }
         }
       }
+    },
+    "/api/v1/questions/{questions_type}": {
+  "get": {
+    "summary": "Get questions by type",
+    "parameters": [
+      {
+        "name": "questions_type",
+        "in": "path",
+        "required": true,
+        "schema": {
+          "type": "string"
+        }
+      }
+    ],
+    "responses": {
+      "200": {
+        "description": "A list of questions",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "questions": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "question_id": {
+                        "type": "string"
+                      },
+                      "question_text": {
+                        "type": "string"
+                      },
+                      "choices": {
+                        "type": "array",
+                        "items": {
+                          "type": "object",
+                          "properties": {
+                            "choice_id": {
+                              "type": "integer"
+                            },
+                            "choice_text": {
+                              "type": "string"
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
+  }
+}
+
   }
 }
